--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "harvest-ui",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
+    "setup": "npm install && gulp init",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-dev": "ng build --dev --output-hashing=all && gulp build",
+    "build-prod": "node --max-old-space-size=4076 ./node_modules/.bin/ng build --prod && gulp build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint harvest-ui",
+    "e2e": "ng e2e",
+    "format": "prettier \"**/*.{ts,js,html,css,scss,json,css,md}\" --write",
+    "check-format": "prettier \"**/*.{ts,js,html,css,scss,json,css,md}\" -l",
+    "current-branch": "$(git branch | grep \\* | cut -d ' ' -f2)",
+    "pretty-quick-current-branch": "pretty-quick --staged --branch npm run current-branch",
+    "stylelint-current-branch": "stylelint npm run current-branch --fix"
   },
   "private": true,
   "dependencies": {
@@ -20,27 +28,38 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
+    "gulp": "^4.0.0",
+    "gulp-rename": "^1.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jssha": "^2.3.1",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lint-staged": "^8.1.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.23.0",
+    "ngx-restangular": "^4.0.1",
+    "prettier": "^1.15.3",
+    "pretty-quick": "^1.8.0",
     "protractor": "~5.4.0",
+    "stylelint": "^9.9.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
