--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "harvest-ui": {
+    "ngx-barebone-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -72,24 +72,24 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "harvest-ui:build"
+            "browserTarget": "ngx-barebone-app:build"
           },
           "configurations": {
             "dev": {
-              "browserTarget": "harvest-ui:build:dev"
+              "browserTarget": "ngx-barebone-app:build:dev"
             },
             "production": {
-              "browserTarget": "harvest-ui:build:production"
+              "browserTarget": "ngx-barebone-app:build:production"
             },
             "test": {
-              "browserTarget": "harvest-ui:build:test"
+              "browserTarget": "ngx-barebone-app:build:test"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "harvest-ui:build"
+            "browserTarget": "ngx-barebone-app:build"
           }
         },
         "test": {
@@ -101,7 +101,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": ["src/styles.scss"],
             "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "assets": ["src/favicon.ico", "src/assets"],
+            "codeCoverageExclude": ["src/common/**/*", "src/config/**/*", "src/test.ts", "src/app/app.config.ts"]
           }
         },
         "lint": {
@@ -113,7 +114,7 @@
         }
       }
     },
-    "harvest-ui-e2e": {
+    "ngx-barebone-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -122,11 +123,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "harvest-ui:serve"
+            "devServerTarget": "ngx-barebone-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "harvest-ui:serve:production"
+              "devServerTarget": "ngx-barebone-app:serve:production"
             }
           }
         },
@@ -140,5 +141,5 @@
       }
     }
   },
-  "defaultProject": "harvest-ui"
+  "defaultProject": "ngx-barebone-app"
 }
