--- a/package.json
+++ b/package.json
@@ -1,6 +1,28 @@
 {
-  "name": "harvest-ui",
+  "name": "ngx-barebone-app",
   "version": "1.0.0",
+  "homepage": "https://github.com/BhavinPatel04/ngx-barebone-app#readme",
+  "bugs": "https://github.com/BhavinPatel04/ngx-barebone-app/issues",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BhavinPatel04/ngx-barebone-app"
+  },
+  "author": "Bhavin Patel",
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "angular5",
+    "angular6",
+    "angular7",
+    "ng2",
+    "ng4",
+    "ng5",
+    "ng7",
+    "ngx",
+    "boilerplate",
+    "barebone"
+  ],
   "scripts": {
     "setup": "npm install && gulp init",
     "ng": "ng",
@@ -9,15 +31,17 @@
     "build-dev": "ng build --dev --output-hashing=all && gulp build",
     "build-prod": "node --max-old-space-size=4076 ./node_modules/.bin/ng build --prod && gulp build",
     "test": "ng test",
-    "lint": "ng lint harvest-ui",
+    "lint": "ng lint ngx-barebone-app --fix",
     "e2e": "ng e2e",
-    "format": "prettier \"**/*.{ts,js,html,css,scss,json,css,md}\" --write",
-    "check-format": "prettier \"**/*.{ts,js,html,css,scss,json,css,md}\" -l",
+    "format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write",
+    "check-format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write -l",
     "current-branch": "$(git branch | grep \\* | cut -d ' ' -f2)",
     "pretty-quick-current-branch": "pretty-quick --staged --branch npm run current-branch",
-    "stylelint-current-branch": "stylelint npm run current-branch --fix"
+    "stylelint-current-branch": "stylelint npm run current-branch --fix",
+    "test-ci": "npm run lint && npm run check-format && npm run test-generate-coverage",
+    "test-generate-coverage": "ng test -- --no-watch --no-progress --browsers=ChromeHeadlessCI --code-coverage"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
