--- a/package.json
+++ b/package.json
@@ -30,18 +30,22 @@
     "build": "ng build",
     "build-dev": "ng build --dev --output-hashing=all && gulp build",
     "build-prod": "node --max-old-space-size=4076 ./node_modules/.bin/ng build --prod && gulp build",
+    "build-lib": "ng-packagr -p ./projects/ngx-antd-json-schema-form/package.json",
     "test": "ng test",
     "lint": "ng lint --fix",
     "e2e": "ng e2e",
+    "gh-pages": "ng build --prod --base-href=\"/ngx-antd-json-schema-form/\" && ngh --dir dist/ngx-antd-json-schema-form",
     "format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write",
     "check-format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write -l",
     "current-branch": "$(git branch | grep \\* | cut -d ' ' -f2)",
     "pretty-quick-current-branch": "pretty-quick --staged --branch npm run current-branch",
     "stylelint-current-branch": "stylelint npm run current-branch --fix",
     "test-ci": "npm run lint && npm run check-format && npm run test-generate-coverage",
-    "test-generate-coverage": "ng test -- --no-watch --no-progress --browsers=ChromeHeadlessCI --code-coverage"
+    "test-generate-coverage": "ng test ngx-antd-json-schema-form -- --no-watch --no-progress --browsers=ChromeHeadlessCI --code-coverage",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
-  "private": false,
+  "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
@@ -54,6 +58,8 @@
     "core-js": "^2.5.4",
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
+    "hammerjs": "^2.0.8",
+    "ngx-antd-json-schema-form": "0.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -66,7 +72,10 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/prismjs": "^1.9.0",
+    "codecov": "^3.1.0",
     "codelyzer": "~4.5.0",
+    "coveralls": "^3.0.2",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -79,12 +88,17 @@
     "lint-staged": "^8.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
+    "ng-packagr": "^4.7.0",
+    "ng-zorro-antd": "^7.0.0-rc.3",
     "ngx-restangular": "^4.0.1",
+    "nyc": "^13.2.0",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
+    "prismjs": "^1.15.0",
     "protractor": "~5.4.0",
     "stylelint": "^9.9.0",
     "ts-node": "~7.0.0",
+    "tsickle": "^0.34.3",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
   }
