--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "noUnusedLocals": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "ngx-antd-json-schema-form": ["dist/ngx-antd-json-schema-form"],
+      "ngx-antd-json-schema-form/*": ["dist/ngx-antd-json-schema-form/*"]
+    }
   }
 }
