--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "ng test",
     "lint": "ng lint --fix",
     "e2e": "ng e2e",
-    "gh-pages": "ng build --prod --base-href=\"/ngx-antd-json-schema-form/\" && ngh --dir dist/ngx-antd-json-schema-form",
+    "gh-pages": "ng build --prod --base-href=\"/ngx-antd-json-schema-form/\" && ngh --dir src",
     "format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write",
     "check-format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write -l",
     "current-branch": "$(git branch | grep \\* | cut -d ' ' -f2)",
