--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "ng test",
     "lint": "ng lint --fix",
     "e2e": "ng e2e",
-    "gh-pages": "ng build --prod --base-href=\"/ngx-antd-json-schema-form/\" && ngh --dir src",
+    "gh-pages": "ng build --prod --base-href=\"/ngx-antd-json-schema-form/\" && ngh --dir dist/ngx-braebone-app",
     "format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write",
     "check-format": "prettier \"**/*.{ts,js,html,css,scss,json,md}\" --write -l",
     "current-branch": "$(git branch | grep \\* | cut -d ' ' -f2)",
@@ -44,6 +44,14 @@
     "test-generate-coverage": "ng test ngx-antd-json-schema-form -- --no-watch --no-progress --browsers=ChromeHeadlessCI --code-coverage",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
+  },
+  "nyc": {
+    "exclude": [
+      "**/scripts/**",
+      "**/coverage/**",
+      "**/test/**",
+      "**/dist/**"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -73,6 +81,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "@types/prismjs": "^1.9.0",
+    "angular-cli-ghpages": "^0.5.3",
     "codecov": "^3.1.0",
     "codelyzer": "~4.5.0",
     "coveralls": "^3.0.2",
